@@ -1,3 +1,41 @@
+md2:5f3ad6c2b2b9092cc5fae8011c6427d8  ref/edos.qa.1
+md4:489168d36a4d31d2c70b6e7026c9a735  ref/edos.qa.1
+md5:5242d46f8f6aece3e7ce06c4f67b7a57  ref/edos.qa.1
+sha1:865f46131ddb03fba58a5e0aca92505ac24ba1ac  ref/edos.qa.1
+sha224:1c1aee96418db4b8685b52b01d2c05e23715a7c2d5590cba8fe73a5e  ref/edos.qa.1
+sha256:19f9db060c45ca2f39e27aa530e791375f2d8fe0b5579a14de1d27f0d823a87a  ref/edos.qa.1
+sha384:d1a995221a2aa5103b7e05eb205aac9131d6bf4ffcd938b9bceabad47a8d41fb8dd11cc29ebfdef0af7a5d9946acff89  ref/edos.qa.1
+sha512:16652bc3c855629bdc8731b6754215fe6518753e2db3a3ab9f39a9b7cbe472d03c0e3465a40a013a6bb0da1d1df34f684eb63ffe4be07b484ace93aa446fcd4b  ref/edos.qa.1
+salsa10:2045b46dd08c1ec1c79d1e831dfdf26120b5e5f90c933b373ef4ee24ae247a2767bfe0304f63c0aeaebb5c1b337f72e0972dc16b3aff1a39a793256812ef8ec5  ref/edos.qa.1
+salsa20:d9176c54c3b34b7a3087fa1cfe22ef21fa4579b2ff4916c224ddd8703071aaafaa23c327a1fd92726cb486c546e83ba48ea946bcc0868a4c07c3acd4611a6b30  ref/edos.qa.1
+rmd128:b263ccaabc93e622979dc8137dccd25e  ref/edos.qa.1
+rmd160:9af1c9b98c3a6d1072d413c25e83ec0b0ccc7237  ref/edos.qa.1
+rmd256:34c6f0c7091cd8dad1b176b22841991a3e11e102ca1879fe04f203252292e403  ref/edos.qa.1
+rmd320:95e14f8a3dbc9579b33c8ed0e0d90c6361c603fe798b1978a9c4d8f6722389f277b5766d730726c3  ref/edos.qa.1
+tiger:eba9b946f3f67734de207261a8c1cc08b8607ef8ae441e92  ref/edos.qa.1
+crc32:328c5fe6  ref/edos.qa.1
+crc64:d3a6911d8404cd92  ref/edos.qa.1
+adler32:82a72f0b  ref/edos.qa.1
+jlu32:5404a03c  ref/edos.qa.1
+md2:1621d33e83f21f46ad99193a2cacac21  ref/edos.qa.2
+md4:4b99c2af60e70196a779d38fe4b6cf50  ref/edos.qa.2
+md5:b923e86eaacc980a1d02a0b7b4fde62b  ref/edos.qa.2
+sha1:593d1236fa18d6a3d49fca94cc1ab978903c739f  ref/edos.qa.2
+sha224:7d799f5688851dabf30b94ad02393982e5c1d3dbbaab89ea76ce3b92  ref/edos.qa.2
+sha256:6370f0d28e49670b04e754bbfaced27dbf5e973dbf8e3144005fe29a7d0d6830  ref/edos.qa.2
+sha384:68fdc0d910d11d1e63b4369604695664c5e5cad7c74d39660857592b309f604ee4a12d2569900fc851f6e0a1ad892500  ref/edos.qa.2
+sha512:a97b93c2dc70842eeb2ea704b26f7762be44b5a7550add5cd9f55557e0153a695bff358416f6e030fb2fb8891deb8b35d5a2cad6ba4c3127d195d17ea8a4fd6f  ref/edos.qa.2
+salsa10:657a9557dad3f5ca24b698f84a87e6acda017c368ed4ccb6dcf9374f6658eaf4922d139807a38c3cec206e5ab86d4663602402aa4480c910872f6c47521b4050  ref/edos.qa.2
+salsa20:602c379fe669b0c95c8b833e4b04c538257a240c855a9574e9d5df86462a13da625390971d423c5b625855c4880bf21b515a2f771cf73c277bfa9c69d2b62dd7  ref/edos.qa.2
+rmd128:3d5d8dbabda28c6cc48e02d9f9efdbdc  ref/edos.qa.2
+rmd160:980ba81f1b73865b8b635c0c9a3b2f7cdc1dc35d  ref/edos.qa.2
+rmd256:8b291df7af54e146296c8da803f59f66c7cd051c775f244b7a24a8d41bc7a156  ref/edos.qa.2
+rmd320:d41196352205f363cdcf4e7120c6d6d95a334fa7e35f26fea3ebe0fd06b6621e62730cfc83b535e5  ref/edos.qa.2
+tiger:24a3ba04a2e828593e61a851c201ea244e9b87a4465ed9c3  ref/edos.qa.2
+crc32:7c02fb0a  ref/edos.qa.2
+crc64:abacb3dee87eefb5  ref/edos.qa.2
+adler32:49072ea7  ref/edos.qa.2
+jlu32:d15150d3  ref/edos.qa.2
 md2:76d2118b507057a7755fd69a759c5cc8  ref/filelists.xml
 md4:c8e9242a738c45e77fcb73e3d8a0e6b2  ref/filelists.xml
 md5:7c21f376442d6f2501f60a305a74dfe1  ref/filelists.xml
@@ -226,25 +264,25 @@ crc32:fa8b6d06  ref/repomd.xml
 crc64:d399084e2ab08822  ref/repomd.xml
 adler32:ad5824dc  ref/repomd.xml
 jlu32:01cabe3f  ref/repomd.xml
-md2:8a8887845421690442debdb4f91851b5  ref/showrc
-md4:2f37904b19ddb9e720d77674c15135b6  ref/showrc
-md5:fba15f6229827dba6f594420a45931a9  ref/showrc
-sha1:8ae4317e8497181197deb801a0c6fb0088848987  ref/showrc
-sha224:95cb0f20e875e6f8be0adee95558b76891ab2cc2caa6394fff429b4f  ref/showrc
-sha256:c25b46ce168aa91f1b96999c5cfc8892a5243c00f131c7f67fe499364ae75b0b  ref/showrc
-sha384:2ca6eead89bf00ead2e349483aead63dbac2ce9903abbf9a09bf5be43849387cd7b2d0651c1fea276673477a7d4988a4  ref/showrc
-sha512:356502bbd1449d6b10c875070d8e10bf7b9250f05826231fd66c16ad5b49208c54c41f1abb9440c55b9330a8e196312a9f1cf4fcdaabc2272b388c752b1a5f0c  ref/showrc
-salsa10:a6880768853f17ea75b418ab53063a3b0ad404488d317d5f0f979953a3b93d2e161a95a98b29e2f7a11f8a41577f7c70927576f7517a4b2af29d858042afa72d  ref/showrc
-salsa20:cb22355df7e394fe6bd9cea98f86a91b0e1e30d7ae602a10683925ed85b8a9fb77b885e709fc50be056768b188c21b92c505c2183414bb7c1bd860192c1460f3  ref/showrc
-rmd128:9760c68b17b33f69f4f34bdde55a70d2  ref/showrc
-rmd160:3b04198aaf58722299f1ef00e75fe440d5a93a74  ref/showrc
-rmd256:b1f04cfa59fecb8ee7c52c620dce4526d7720bcee6cb6f75adc683fb17f3930d  ref/showrc
-rmd320:f8a56848e24525ffa5122b9bc5298d2657b47f583be7aa0c13dfc8d335f2df5fa7b87dd5052a3afa  ref/showrc
-tiger:740a30795393636a6b651a2417d9a4cd034b20221a9c4010  ref/showrc
-crc32:554bd19f  ref/showrc
-crc64:fe0f71ed03ba9e0e  ref/showrc
-adler32:b4bf5cc8  ref/showrc
-jlu32:f198d099  ref/showrc
+md2:dcfe6450c64dbddbddc65b6137861eec  ref/showrc
+md4:aaabd571640961534bc474b3b4793243  ref/showrc
+md5:ec5519c8199cb0322810f183f0495ce4  ref/showrc
+sha1:36223315bc818c53cae77a3853de43eb97207add  ref/showrc
+sha224:bf9c5f2d72bf83f1f448efe921e8484f15bdd7ea1024ef6d9284befc  ref/showrc
+sha256:b4e01dfc4b7aac3af2f02429ac0e28d44a7f9004167547b021c6882341dda073  ref/showrc
+sha384:4bd0c0375a4f21191d9cc343964e3917d3493c4a0355c1de093bf2f4d52381a6855004fb45b7eb53d931a4d84ccd834d  ref/showrc
+sha512:318fe16e7199f12a12d8ec2998a557d63f8b5192f4067df22b6709970542195833dc4fdcf718d85948316025194e34b8a56a311db8cdf3845a3b3019c22fff94  ref/showrc
+salsa10:66a9f3cf6e6c45eef46ddb13080b37e39740757125235a39dab4105a0ea961a396d9ef0e2ca6af21a702ee8c4ec16f86784178b46b6fa56745510db7411206a6  ref/showrc
+salsa20:150c8b5df4f5423150d35ac65bfdabaf9d3d986fc473d209cbe539c2aed16ccc76a988211109d354b74b5fc70666e5d64d459bc6c1fd3066e9a83a299bdeecca  ref/showrc
+rmd128:7857aa9a4c98e77da91ca2728e3ce277  ref/showrc
+rmd160:5633030f50bfd3af9253b2d59a734f611bdc5659  ref/showrc
+rmd256:30474cd5aee75d70073a9705dff6fb1e1784033f4c79bec6d416c5e7c7822e5d  ref/showrc
+rmd320:2a7d4ca4c4bf44617cfb68aead837e1f2a4acb382877c1bdbd7a7ec66fc9bfaa4d0eca34228560c2  ref/showrc
+tiger:c42844902c3ba0834d85bdacaf90debc68d0ee64560f9c85  ref/showrc
+crc32:08c3e7b5  ref/showrc
+crc64:adac56f7e648729e  ref/showrc
+adler32:d4fb7ed4  ref/showrc
+jlu32:7daf557b  ref/showrc
 md2:702d78dbf9033f52c9263253e626c5be  ref/version
 md4:75e0e6207421a7c860d7cd4c8e19695f  ref/version
 md5:063c879105b7acac5340b506fe5df7ec  ref/version
